--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.21.0",
     "baseui": "^13.0.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
@@ -20,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
+    "redux-persist": "^6.0.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
     "uuid": "^9.0.0"
