--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-grid-system": "^8.1.9",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "redux-persist": "^6.0.0",
