--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.21.0",
+    "axios": "^1.4.0",
     "baseui": "^13.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
@@ -19,6 +20,7 @@
     "framer-motion": "^10.12.16",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
