--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/client": "^6.1.7",
+    "@sanity/image-url": "^1.0.2",
     "@tabler/icons-react": "^2.21.0",
     "axios": "^1.4.0",
     "baseui": "^13.0.0",
